# Tool

./: .gitignore  Android_Build.txt  CMake 使用方法.txt  CMakeLists.txt  CMake构建配置.bat  CMake构建项目.bat  CMake配置构建.bat  GitScript.bat  LICENSE  README.md
build_Android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_Unix/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: CharHandleOfConfigFile.h  CommonTools.h  ConfigFileTextManage.h  Edit.h  Font.h  Hotkey.h  Key.h  Location.h  Log.h  Message.h  Shell.h  Tchar_Typical.h  Time_Typical.h  Timers.h  ToolsConfigFile.h  Tools_Tool.h  WindowHosting.h  pch.h
include/TypicalTool/: Tool.h
include/TypicalTool/Tool/: CommonTools.h  ConfigFileTextManage.h  FileManage.h  Json_Typical.h  Languages.h  Log.h  StringManage.h  Tchar_Typical.h  Time_Typical.h  WindowHost.h  pch.h
include/libTypical/Tool/: CommonTools.h  ConfigFileTextManage.h  FileManage.h  Json_Typical.h  Log.h  Tchar_Typical.h  Time_Typical.h  WindowHost.h  pch.h
lib/libTypical/Release/: libTypical.lib
lib/libTypical/Release_Win/: libTypical.lib
src/: CharHandleOfConfigFile.cpp  CommonTools.cpp  ConfigFileTextManage.cpp  Edit.cpp  FileManage.cpp  Font.cpp  HotKey.cpp  Json_Typical.cpp  Location.cpp  Log.cpp  Message.cpp  Shell.cpp  StringManage.cpp  Tchar_Typical.cpp  Time.cpp  Timers.cpp  ToolsConfigFile.cpp  WindowsHost.cpp  WindowsHosting.cpp  key.cpp  pch.cpp
